tests/failing/assign_incompatible.dodo
fn main() {
    let x: u8 = 300;
}
